- Fix websocket bug not focus to the textfield when button send on mobile - Add Chatbox to message - Add Refresh Websocket button - Connect and Disconnect status now functionaly work

--- a/src/assets/scss/_message.scss
+++ b/src/assets/scss/_message.scss
@@ -5,9 +5,10 @@
 }
 
 .sidebarMessageCloseContainer {
+    display: flex;
     position: fixed;
     z-index: 1002;
-    text-align: left;
+    justify-content: space-between;
     width: 30vw;
     @media (min-width: $phone-s) and (max-width: $table-plus) {
         width: 100vw;
